--- a/Diagnosis.Core/Diagnosis.Core.csproj
+++ b/Diagnosis.Core/Diagnosis.Core.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Combination.cs" />
+    <Compile Include="DateFormatter.cs" />
     <Compile Include="DateOffset.cs" />
     <Compile Include="Extensions\ConvertExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
