--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -69,6 +69,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AutoCompleteTest.cs" />
+    <Compile Include="DateFormatterTest.cs" />
     <Compile Include="DateOffsetTest.cs" />
     <Compile Include="PatientTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
