--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Controls\Card\AppointmentsTabs.xaml.cs">
       <DependentUpon>AppointmentsTabs.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Card\AddNewDataTemplateSelector.cs" />
     <Compile Include="Controls\Card\SearchResult.xaml.cs">
       <DependentUpon>SearchResult.xaml</DependentUpon>
     </Compile>
@@ -341,6 +342,7 @@
     <Compile Include="ViewModels\Domain\PatientViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
+    <Compile Include="ViewModels\WithAddNew.cs" />
     <Compile Include="Windows\Helpers\DialogCloser.cs" />
     <Compile Include="Windows\SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
