--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -145,11 +145,14 @@
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
+    <Compile Include="Behaviors\FocusBehavior.cs" />
     <Compile Include="Controls\AlignableWrapPanel.cs" />
     <Compile Include="Controls\Card\AppointmentsTabs.xaml.cs">
       <DependentUpon>AppointmentsTabs.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Card\AddNewDataTemplateSelector.cs" />
+    <Compile Include="Controls\Helpers\DataGridHelper.cs" />
+    <Compile Include="Controls\Helpers\FirstFocusedElementExtension.cs" />
     <Compile Include="Controls\Search\SearchResult.xaml.cs">
       <DependentUpon>SearchResult.xaml</DependentUpon>
     </Compile>
