HealthRecord replace WhiteSpace comments to null

--- a/Diagnosis.Core/Diagnosis.Core.csproj
+++ b/Diagnosis.Core/Diagnosis.Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Extensions\ConvertExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Comparers.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Models\Appointment.cs" />
     <Compile Include="Checkers.cs" />
     <Compile Include="Models\Course.cs" />
