--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="PatientTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryTest.cs" />
+    <Compile Include="StringExtensionTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Diagnosis.App\Diagnosis.App.csproj">
