--- a/Diagnosis.Core/Diagnosis.Core.csproj
+++ b/Diagnosis.Core/Diagnosis.Core.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Models\IcdBlock.cs" />
     <Compile Include="Models\IcdChapter.cs" />
     <Compile Include="Models\IcdDisease.cs" />
+    <Compile Include="Models\IEntity.cs" />
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Models\PatientRecordProperty.cs" />
     <Compile Include="Models\Property.cs" />
