--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -127,9 +127,9 @@
     <None Include="Repositories\RepositoriesClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Diagnosis.Core\Diagnosis.Core.csproj">
-      <Project>{a91ad3b7-cb0f-426c-a539-1cffc13df0ee}</Project>
-      <Name>Diagnosis.Core</Name>
+    <ProjectReference Include="..\Diagnosis.Models\Diagnosis.Models.csproj">
+      <Project>{f1ef016e-80f6-461c-ac4b-e087e42a9f0c}</Project>
+      <Name>Diagnosis.Models</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
