--- a/Diagnosis.Models/Diagnosis.Models.csproj
+++ b/Diagnosis.Models/Diagnosis.Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A91AD3B7-CB0F-426C-A539-1CFFC13DF0EE}</ProjectGuid>
+    <ProjectGuid>{F1EF016E-80F6-461C-AC4B-E087E42A9F0C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Diagnosis.Core</RootNamespace>
-    <AssemblyName>Diagnosis.Core</AssemblyName>
+    <RootNamespace>Diagnosis.Models</RootNamespace>
+    <AssemblyName>Diagnosis.Models</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,8 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <RunCodeAnalysis>false</RunCodeAnalysis>
-    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -41,20 +39,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Combination.cs" />
-    <Compile Include="DateFormatter.cs" />
-    <Compile Include="DateOffset.cs" />
-    <Compile Include="Extensions\ConvertExtensions.cs" />
-    <Compile Include="Extensions\EnumerableExtensions.cs" />
-    <Compile Include="Comparers.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="Checkers.cs" />
+    <Compile Include="DoctorSettings.cs" />
+    <Compile Include="Models\Appointment.cs" />
+    <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\Diagnosis.cs" />
+    <Compile Include="Models\Doctor.cs" />
+    <Compile Include="Models\HealthRecord.cs" />
+    <Compile Include="Models\IcdBlock.cs" />
+    <Compile Include="Models\IcdChapter.cs" />
+    <Compile Include="Models\IcdDisease.cs" />
+    <Compile Include="IEntity.cs" />
+    <Compile Include="Models\Patient.cs" />
+    <Compile Include="Models\PatientRecordProperty.cs" />
+    <Compile Include="Models\Property.cs" />
+    <Compile Include="Models\PropertyValue.cs" />
+    <Compile Include="Models\RecordCategory.cs" />
+    <Compile Include="Models\Speciality.cs" />
+    <Compile Include="Models\Symptom.cs" />
+    <Compile Include="Models\SymptomWords.cs" />
+    <Compile Include="Models\Word.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuerySeparator.cs" />
-    <Compile Include="SequencePartition.cs" />
-    <Compile Include="ViewModelBase.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Models\ModelsClassDiagram.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Diagnosis.Core\Diagnosis.Core.csproj">
+      <Project>{a91ad3b7-cb0f-426c-a539-1cffc13df0ee}</Project>
+      <Name>Diagnosis.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
