--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -249,7 +249,7 @@
       <DependentUpon>Patients.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\HrEditorViewModel.cs" />
-    <Compile Include="ViewModels\Managers\EntityManagers.cs" />
+    <Compile Include="ViewModels\Producers\EntityProducers.cs" />
     <Compile Include="MessagingParams.cs" />
     <Compile Include="Screens\Search.xaml.cs">
       <DependentUpon>Search.xaml</DependentUpon>
@@ -283,18 +283,18 @@
     <Compile Include="ViewModels\Search\WordSearcher.cs" />
     <Compile Include="ViewModels\Search\PatientSearcher.cs" />
     <Compile Include="ViewModels\Domain\CategoryViewModel.cs" />
-    <Compile Include="ViewModels\Managers\SymptomsManager.cs" />
-    <Compile Include="ViewModels\Managers\WordsManager.cs" />
+    <Compile Include="ViewModels\Producers\SymptomsProducer.cs" />
+    <Compile Include="ViewModels\Producers\WordsProducer.cs" />
     <Compile Include="ViewModels\Extensions\HierarchicalExtensions.cs" />
     <Compile Include="ViewModels\Search\AutoCompleteBoxViewModel.cs" />
     <Compile Include="ViewModels\Search\SearchWrap.cs" />
     <Compile Include="ViewModels\Domain\SymptomViewModel.cs" />
     <Compile Include="ViewModels\HierarchicalCheckable.cs" />
-    <Compile Include="ViewModels\Managers\DiagnosisManager.cs" />
-    <Compile Include="ViewModels\Managers\CoursesManager.cs" />
+    <Compile Include="ViewModels\Producers\DiagnosisProducer.cs" />
+    <Compile Include="ViewModels\Domain\CoursesManager.cs" />
     <Compile Include="ViewModels\Domain\AppointmentViewModel.cs" />
     <Compile Include="ViewModels\Domain\HealthRecordViewModel.cs" />
-    <Compile Include="ViewModels\Managers\DoctorsManager.cs" />
+    <Compile Include="ViewModels\Producers\DoctorsProducer.cs" />
     <Compile Include="ViewModels\Domain\CourseViewModel.cs" />
     <Compile Include="ViewModels\Domain\DoctorViewModel.cs" />
     <Compile Include="ViewModels\Search\DiagnosisAutoComplete.cs" />
@@ -339,8 +339,8 @@
     <Compile Include="ViewModels\Screens\LoginViewModel.cs" />
     <Compile Include="ViewModels\Screens\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\Interfaces\IAutoComplete.cs" />
-    <Compile Include="ViewModels\Managers\PatientsManager.cs" />
-    <Compile Include="ViewModels\Managers\PropertyManager.cs" />
+    <Compile Include="ViewModels\Producers\PatientsProducer.cs" />
+    <Compile Include="ViewModels\Producers\PropertyProducer.cs" />
     <Compile Include="ViewModels\Domain\PropertyViewModel.cs" />
     <Compile Include="ViewModels\HierarchicalExplorer.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
