--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="DateOffsetTest.cs" />
     <Compile Include="PatientTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuerySeparatorTest.cs" />
     <Compile Include="RepositoryTest.cs" />
     <Compile Include="StringExtensionTest.cs" />
   </ItemGroup>
